@@ -22,6 +22,9 @@ Changes
 Fixes
 =====
 
+ - Fixed wrong results when querying ``IS NULL`` and ``IS NOT NULL`` on an
+   array of objects.
+
  - Fixed an issue that caused an Exception to be thrown on ``JOIN`` queries
    with 4 or more tables when an ``ORDER BY`` is also applied.
 
